Fixed modal close button color in dark mode

--- a/app/resources/sass/dark-mode.scss
+++ b/app/resources/sass/dark-mode.scss
@@ -55,6 +55,14 @@
 
             header {
                 @apply bg-purple-700;
+
+                button {
+                    @apply text-purple-900;
+
+                    &:hover {
+                        @apply text-white;
+                    }
+                }
             }
         }
     }
